--- a/settings.json
+++ b/settings.json
@@ -1,18 +1,18 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
-	"botnumber": "94767043432",
+	"ownerNumber": "7451216064",
+	"ownerNumberr": "+7451216064",
+	"botnumber": "7451216064",
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94767043432",
-	"donate": "94767043432",
+	"wa": "wa.me/+7451216064",
+	"donate": "7451216064",
 	"ig": "https://instagram.com/HYPER_MOD",
 	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
-	"botname":"「 Queen Alexa 」",
+	"ownername": "© 🅢︎🅐︎🅒︎🅗︎🅘︎🅝︎",
+	"botname":"「 𝕤𝕒𝕔𝕙𝕚𝕟 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
